# fsrs-rs

./: .dprint.json  .gitattributes  .gitignore  BENCHMARK_REPORT.md  CITATION.cff  Cargo.toml  LICENSE  Makefile  README.md  main.rs  rust-toolchain.toml
.cargo/: config.toml
.gemini/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: auto-merge.yml  autofix.yml  check.sh  check.yml
.idx/: dev.nix
artifacts/burn_removal_perf/: perf-compare.json  perf-compare.tsv
benches/: benchmark.rs  cost_adr.rs  evaluate.rs  fsrs7_penalty.rs  parameters.rs  simulation.rs  wgpu_benchmark.rs
docs/: ADR_PERFORMANCE_IMPROVEMENT.MD  COMPATIBILITY.MD  COST_ADR.MD  FSRS7_PENALTY.MD  FSRS7_SPEED_PORT_PLAN.MD  INFERENCE_DATA_FLOW.MD  MODEL_SPLIT.MD  S90_RETRIEVAL.MD  SM2_BRIDGE.MD  TEST_FIXTURES.MD  TRAINING_DATA_FLOW.MD
examples/: cost_adr.rs  fsrs7_adr_collection.rs  migrate.rs  optimize.rs  schedule.rs
py/: test.py
scripts/: generate_gradients.py
src/: analytic.rs  analytic_v7.rs  analytical_gradients.rs  batch_shuffle.rs  convertor.rs  convertor_tests.rs  cosine_annealing.rs  cost_adr.rs  dataloader.rs  dataset.rs  error.rs  inference.rs  inference_v6.rs  inference_v7.rs  lib.rs  model.rs  model_v6.rs  model_v7.rs  neon_math.rs  optimal_retention.rs  optimizer.rs  parameter_clipper.rs  parameter_clipper_v6.rs  parameter_clipper_v7.rs  parameter_initialization.rs  parameter_initialization_fsrs7.rs  pre_training.rs  python_bindings.rs  simulation.rs  test_helpers.rs  training.rs  training_v6.rs  training_v7.rs  weight_clipper.rs
src/analytic_v7/: neon_loss.rs
src/simulation/: neon.rs
tests/data/: revlog_history.json
tools/: burn_removal_perf_compare.py
tools/autoresearch/: README.md  run.py  test_run.py  verify_accepted.py
