[package]
name = "fsrs"
version = "4.1.1"
authors = ["Open Spaced Repetition"]
categories = ["algorithms", "science"]
edition = "2024"
homepage = "https://github.com/open-spaced-repetition"
keywords = ["spaced-repetition", "algorithm", "fsrs", "machine-learning"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/open-spaced-repetition/fsrs-rs"
description = "FSRS for Rust, including Optimizer and Scheduler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.burn]
# version = "0.13.0"
# git = "https://github.com/burn-rs/burn.git"
# rev = "d2639682367f39d0d0ed049d0cf3a2077259e05d"
path = "../burn/crates/burn"
default-features = false
features = ["std", "train", "ndarray", "autodiff", "browser"]

[dev-dependencies.burn]
# version = "0.13.0"
# git = "https://github.com/burn-rs/burn.git"
# rev = "d2639682367f39d0d0ed049d0cf3a2077259e05d"
path = "../burn/crates/burn"
default-features = false
features = ["std", "train", "ndarray", "sqlite-bundled", "metrics"]

[dependencies]
itertools = "0.14.0"
log = "0.4"
ndarray = "0.16.1"
priority-queue = "=2.5.0"
rand = "0.9.1"
rayon = "1.8.0"
serde = "1.0.219"
snafu = "0.8.6"
strum = { version = "0.27.1", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.3"
wasm-bindgen = "0.2.91"

[dev-dependencies]
criterion = { version = "0.6.0" }
csv = "1.3.0"
fern = "0.7.1"
rusqlite = { version = "0.34.0" }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "parameters"
harness = false

[[example]]
name = "schedule"
path = "examples/schedule.rs"

[[example]]
name = "migrate"
path = "examples/migrate.rs"

[[example]]
name = "optimize"
path = "examples/optimize.rs"
