[package]
name = "fsrs"
version = "6.0.0"
authors = ["Open Spaced Repetition"]
categories = ["algorithms", "science"]
edition = "2024"
homepage = "https://github.com/open-spaced-repetition"
keywords = ["spaced-repetition", "algorithm", "fsrs", "machine-learning"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/open-spaced-repetition/fsrs-rs"
description = "FSRS for Rust, including Optimizer and Scheduler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.burn]
version = "0.17.1"
# git = "https://github.com/tracel-ai/burn.git"
# rev = "6ae3926006872a204869e84ffc303417c54b6b7f"
# path = "../burn/burn"
default-features = false
features = ["std", "train", "ndarray", "metrics"]

[dev-dependencies.burn]
version = "0.17.1"
# git = "https://github.com/tracel-ai/burn.git"
# rev = "6ae3926006872a204869e84ffc303417c54b6b7f"
# path = "../burn/burn"
default-features = false
features = ["std", "train", "ndarray", "sqlite-bundled", "metrics"]

[dependencies]
itertools = "0.14.0"
log = "0.4"
ndarray = "0.16.1"
priority-queue = "=2.6.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = "1.0.226"
snafu = "0.8.9"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.4"
criterion = { version = "0.7.0" }
csv = "1.3.0"
fern = "0.7.1"
rusqlite = { version = "0.34.0" }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "parameters"
harness = false

[[example]]
name = "schedule"
path = "examples/schedule.rs"

[[example]]
name = "migrate"
path = "examples/migrate.rs"

[[example]]
name = "optimize"
path = "examples/optimize.rs"
