[package]
name = "fsrs"
version = "6.6.0"
authors = ["Open Spaced Repetition"]
categories = ["algorithms", "science"]
edition = "2024"
homepage = "https://github.com/open-spaced-repetition"
keywords = ["spaced-repetition", "algorithm", "fsrs", "machine-learning"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/open-spaced-repetition/fsrs-rs"
description = "FSRS for Rust, including Optimizer and Scheduler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
# Experimental: Cost ADR APIs may change without semver compatibility guarantees.
experimental_cost_adr = ["dep:rand_distr"]
burn-backend = ["dep:burn"]

[dependencies.burn]
version = "0.17.1"
default-features = false
features = ["std", "train", "ndarray", "metrics"]
optional = true

[dev-dependencies.burn]
version = "0.17.1"
# git = "https://github.com/tracel-ai/burn.git"
# rev = "6ae3926006872a204869e84ffc303417c54b6b7f"
# path = "../burn/burn"
default-features = false
features = ["std", "train", "ndarray", "sqlite-bundled", "metrics"]

[dependencies]
itertools = "0.14.0"
log = "0.4"
ndarray = "0.17.2"
priority-queue = "=2.7.0"
rand = "0.10.1"
rand_distr = { version = "0.6.0", optional = true }
rayon = { version = "1.12.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.9.1"
strum = { version = "0.28.0", features = ["derive"] }

[dev-dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.4"
criterion = { version = "0.8.2" }
csv = "1.4.0"
fern = "0.7.1"
rusqlite = { version = "0.34.0" }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "parameters"
harness = false

[[example]]
name = "schedule"
path = "examples/schedule.rs"

[[example]]
name = "migrate"
path = "examples/migrate.rs"

[[example]]
name = "optimize"
path = "examples/optimize.rs"

[[example]]
name = "cost_adr"
path = "examples/cost_adr.rs"
required-features = ["experimental_cost_adr"]
